[UPDATE]  solicitud de etiquetas

--- a/src/app/pages/sistemas/solicitud-de-etiquets/solicitud-de-etiquets.component.html
+++ b/src/app/pages/sistemas/solicitud-de-etiquets/solicitud-de-etiquets.component.html
@@ -1,3 +1,23 @@
+<div class="sub-menu">
+  <button
+    nbButton
+    size="small"
+    ghost
+    routerLink="/pages/sistemas/solicitud-de-etiquets"
+    routerLinkActive="active"
+    [routerLinkActiveOptions]="{ exact: true }">
+    Formulario
+  </button>
+  <button
+    nbButton
+    size="small"
+    ghost
+    routerLink="/pages/sistemas/solicitud-de-etiquets/lista"
+    routerLinkActive="active">
+    Lista de solicitudes
+  </button>
+</div>
+
 <div class="solicitud-layout">
   <nb-card>
     <nb-card-header>Solicitud Etiquetas | Formulario</nb-card-header>
